# Dice

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  utils.rs
src/components/: name.vue
